--- a/tb3_ws/olympic/package.xml
+++ b/tb3_ws/olympic/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>olympic</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Tutorial ros to draw circles with services</description>
   <maintainer email="al415556@uji.es">max</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
